# SBaGenX

./: .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  ChangeLog.txt  Dockerfile  NOTICE.txt  README.md  USAGE.md  VERSION  android-build-libs.sh  compose.yml  flacdec.c  lib.sh  linux-build-all.sh  linux-build-libs.sh  linux-build-sbagenx.sh  linux-create-deb.sh  macos-build-libs.sh  macos-build-sbagenx.sh  macos-create-installer.sh  oggdec.c  sbagenlib.c  sbagenlib.h  sbagenlib_dsp.h  sbagenx.c  sbagenxlib.c  sbagenxlib.h  sbagenxlib_curve_impl.h  setup.iss  windows-build-all.sh  windows-build-gui.sh  windows-build-libs.sh  windows-build-sbagenx.sh  windows-create-installer.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+2 more)
docs/: ARCHITECTURE.md  COMMUNITY_STARTERS.md  Doxyfile  GUI_REFERENCE.md  SBAGEN+.txt  SBAGENLIB.md  SBAGENX.txt  SBAGENXLIB.md  SBAGENXLIB_API.md  SBAGENXLIB_DOTNET_INTEROP.md  SBAGENXLIB_DOXYGEN.md  SBAGENXLIB_QUICKSTART.md
gui/: App.axaml  App.axaml.cs  MainWindow.SbxRuntime.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  app.manifest  gui.csproj  package-lock.json  package.json  vite.config.ts
gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs  sbagenxlib.rs
gui/src-tauri/windows/: nsis-hooks.nsh
libs/: windows-python-runtime-SOURCES.txt  windows-runtime-SOURCES.txt
licenses/: README.txt
scripts/: sbagenx_plot.py
studio/: apply-theia-overlay.sh  build-sbagenx-studio-engine.sh  build-studio.sh  run-studio.sh
(+147 files in other folders)
