[package]
name = "sbagenx-gui"
version = "3.9.0-alpha.14"
description = "SBaGenX desktop GUI scaffold"
authors = ["SBaGenX"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sbagenx_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
cpal = "0.15"
libc = "0.2"
libloading = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
